ci: opt-in parallel execution of functional test suites